h2. Changelog

h3. Versión 1.1

* Arreglado problema de NullPointer al acceder a la página de aportación.
* Arreglado fallo en el botón de acceso con certificado electrónico, se duplicaba el mensaje de "comprobando certificado..." si se pulsaba más de una vez.
* Arreglado error cuando un representante intenta firma la solicitud.
* Arreglado error al asignar la participación del representante en una solicitud de persona física.
* Si al presentar la solicitud no se pueden clasificar algunos de los documentos, la solicitud se considera iniciada y se permite al administrador pulsar el botón para completar el proceso de presentación.
* Se añade el representante de las personas físicas a la platilla del documento de la solicitud.
* Añadido método en el controlador para validar las reglas de negocio.
* Agregado atributo anchoTitulo a los elementos Texto, Combo, AreaTexto y Check, permite especificar el ancho de la etiqueta.
* Generador actualizado a Xtext 2.0 (Actualizada documentación y librerías del plugin)
* Se añade la columna "Nombre Solicitante" a la tabla de solicitudes.
* Añadida anotación validate a los atributos de las entidades, permite validar un atributo de tipo texto mediante una expresión regular, asignar un rango de valores a un atributo de tipo numerico y validar si los atributos de tipo booleano son True.u*Al presentar la solicitud se comprueba si el ciudadano aporto los documentos imprescindibles (si falta alguno no se presenta la solicitud) y se le muestra un aviso si le falta algún documento obligatorio. 

h3. Versión 1.0.2

* El atributo página de las tablas ahora puede ser una properties si comienza con @ 
* Aplicado cambios de adaptación a la nueva versión del AED.
* Añadido el parametro "seleccionable" a las tablas, con esto el usuario puede seleccionar mas de una fila en la tabla y obtener la lista de elementos en el controlador.  
* Añadida la pagina informe que muestra información de la aplicación (número de solicitudes, de documentos ...)